// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProposalDetailLikers /> should not render anything when proposal has no likers 1`] = `""`;

exports[`<ProposalDetailLikers /> should render a <OverlayTrigger /> with <Tooltip /> when proposal has likers 1`] = `
<span
  className="tags-list__tag"
>
  <OverlayTrigger
    defaultOverlayShown={false}
    overlay={
      <Tooltip
        bsClass="tooltip"
        id="proposal-1-likers-tooltip-"
        placement="right"
      >
        <Relay(ProposalDetailLikersTooltipLabel)
          proposal={
            Object {
              "$fragmentRefs": null,
              "$refType": null,
              "id": "1",
              "likers": Array [
                Object {
                  "id": "1",
                },
              ],
            }
          }
        />
      </Tooltip>
    }
    placement="top"
    trigger={
      Array [
        "hover",
        "focus",
      ]
    }
  >
    <Relay(ProposalDetailLikersLabel)
      proposal={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
          "id": "1",
          "likers": Array [
            Object {
              "id": "1",
            },
          ],
        }
      }
    />
  </OverlayTrigger>
</span>
`;

exports[`<ProposalDetailLikers /> should render a div when specified 1`] = `
<div
  className="tags-list__tag"
>
  <OverlayTrigger
    defaultOverlayShown={false}
    overlay={
      <Tooltip
        bsClass="tooltip"
        id="proposal-1-likers-tooltip-"
        placement="right"
      >
        <Relay(ProposalDetailLikersTooltipLabel)
          proposal={
            Object {
              "$fragmentRefs": null,
              "$refType": null,
              "id": "1",
              "likers": Array [
                Object {
                  "id": "1",
                },
              ],
            }
          }
        />
      </Tooltip>
    }
    placement="top"
    trigger={
      Array [
        "hover",
        "focus",
      ]
    }
  >
    <Relay(ProposalDetailLikersLabel)
      proposal={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
          "id": "1",
          "likers": Array [
            Object {
              "id": "1",
            },
          ],
        }
      }
    />
  </OverlayTrigger>
</div>
`;
